# libgcm

./: .gitignore  Makefile.am  README.md  configure.ac
gentoo/: libgcm-9999.ebuild
src/: libgcm.c  libgcm.h  libgcm.pc.in
